--- a/src/Albatross.Expression/Albatross.Expression.csproj
+++ b/src/Albatross.Expression/Albatross.Expression.csproj
@@ -1,26 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
-    <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <Title>Albatross Expression Api</Title>
-    <Description>Albatross.Expression api is created to process and evaluate text based expression strings.  The api tokenizes the expression text and create a tree model from the tokens.  Using the model, it can evaluate the expression or convert it to a expression of different format.  Some applications revert the process by creating the model first and using it to generate certain expression such as a sql query statement.  The api also contains a useful ExecutionContext class that allows evaluation of expressions with variables.  The variables can be read internally or directly from external objects.</Description>
-    <Authors>Rushui Guan</Authors>
-    <Version>2.0.5-alpha</Version>
-    <PackageProjectUrl>https://rushuiguan.github.io/expression/</PackageProjectUrl>
-    <PackageTags>csharp expression parser eval context</PackageTags>
-    <Copyright>Copyright 2018</Copyright>
-    <PackageReleaseNotes>Please see https://rushuiguan.github.io/expression/</PackageReleaseNotes>
-  </PropertyGroup>
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="System.Security.Principal.Windows">
-      <Version>4.4.1</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="LICENSE">
-      <Pack>True</Pack>
-      <PackagePath>
-      </PackagePath>
-    </None>
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<PackageLicenseFile>LICENSE</PackageLicenseFile>
+		<Title>Albatross Expression Api</Title>
+		<Description>Albatross.Expression api is created to process and evaluate text based expression strings.  The api tokenizes the expression text and create a tree model from the tokens.  Using the model, it can evaluate the expression or convert it to a expression of different format.  Some applications revert the process by creating the model first and using it to generate certain expression such as a sql query statement.  The api also contains a useful ExecutionContext class that allows evaluation of expressions with variables.  The variables can be read internally or directly from external objects.</Description>
+		<Authors>Rushui Guan</Authors>
+		<Version>3.0.0-alpha</Version>
+		<PackageProjectUrl>https://rushuiguan.github.io/expression/</PackageProjectUrl>
+		<PackageTags>csharp expression parser eval context</PackageTags>
+		<Copyright>Copyright 2018</Copyright>
+		<PackageReleaseNotes>Please see https://rushuiguan.github.io/expression/</PackageReleaseNotes>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="System.Security.Principal.Windows">
+			<Version>4.7.0</Version>
+		</PackageReference>
+		<PackageReference Include="System.Text.Json" Version="4.7.2" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="LICENSE">
+			<Pack>True</Pack>
+			<PackagePath>
+			</PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
