--- a/src/Albatross.Expression.Test/Albatross.Expression.Test.csproj
+++ b/src/Albatross.Expression.Test/Albatross.Expression.Test.csproj
@@ -1,14 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp2.0</TargetFrameworks>
+		<TargetFramework>net5.0</TargetFramework>
+		<OutputType>Library</OutputType>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="NUnit" Version="3.10.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.7.0" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
-		<PackageReference Include="SimpleInjector" Version="4.1.1" />
+		<PackageReference Include="NUnit" Version="3.13.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
+		<PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
+		<PackageReference Include="SimpleInjector" Version="5.2.0" />
 	</ItemGroup>
 
 	<ItemGroup>
