--- a/src/Albatross.Expression/Albatross.Expression.csproj
+++ b/src/Albatross.Expression/Albatross.Expression.csproj
@@ -10,6 +10,7 @@
     <PackageTags>csharp expression parser eval context</PackageTags>
     <Copyright>Copyright 2018</Copyright>
     <PackageReleaseNotes>Please see https://rushuiguan.github.io/expression/</PackageReleaseNotes>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="System.Security.Principal.Windows">
@@ -18,6 +19,10 @@
     <PackageReference Include="System.Text.Json" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="LICENSE">
       <Pack>True</Pack>
       <PackagePath>
