--- a/src/Albatross.Expression/Albatross.Expression.csproj
+++ b/src/Albatross.Expression/Albatross.Expression.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-		<AssemblyVersion>2.3.12.1</AssemblyVersion>
-		<FileVersion>2.3.12.1</FileVersion>
+		<AssemblyVersion>2.3.12.2</AssemblyVersion>
+		<FileVersion>2.3.12.2</FileVersion>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Version>2.3.12.1</Version>
+		<Version>2.3.12.2</Version>
 		<Authors>Workiom.Expression</Authors>
 		<PackageId>Workiom.Expression</PackageId>
 		<Product>Workiom.Expression</Product>
-		<Description>Add char and word count functions #1</Description>
+		<Description>Add char and word count functions #2</Description>
 	</PropertyGroup>
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
 	  <PackageReference Include="System.Security.Principal.Windows">
@@ -16,6 +16,8 @@
 	  </PackageReference>
 	</ItemGroup>
 	<ItemGroup>
+	  <PackageReference Include="CommonMark.NET" Version="0.15.1" />
+	  <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
 	  <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 	</ItemGroup>
 </Project>
