--- a/src/Albatross.Expression/Albatross.Expression.csproj
+++ b/src/Albatross.Expression/Albatross.Expression.csproj
@@ -12,20 +12,25 @@
 		<Copyright>Copyright 2018</Copyright>
 		<PackageReleaseNotes>Please see https://rushuiguan.github.io/expression/</PackageReleaseNotes>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<PackageIcon>icon.png</PackageIcon>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="System.Security.Principal.Windows" Version="5.0.0" />
 		<PackageReference Include="System.Text.Json" Version="8.0.5" />
 	</ItemGroup>
 	<ItemGroup>
-		<None Include="..\..\README.md">
-			<Pack>True</Pack>
-			<PackagePath>\</PackagePath>
-		</None>
 		<None Include="LICENSE">
 			<Pack>True</Pack>
 			<PackagePath>
 			</PackagePath>
+		</None>
+		<None Update="icon.png">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Update="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
 		</None>
 	</ItemGroup>
 </Project>
