--- a/src/Albatross.Expression.Test/Albatross.Expression.Test.csproj
+++ b/src/Albatross.Expression.Test/Albatross.Expression.Test.csproj
@@ -1,16 +1,22 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFramework>net8.0</TargetFramework>
-		<OutputType>Library</OutputType>
-	</PropertyGroup>
-	<ItemGroup>
-		<PackageReference Include="NUnit" Version="4.2.2" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
-		<PackageReference Include="SimpleInjector" Version="5.5.0" />
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\Albatross.Expression\Albatross.Expression.csproj" />
-	</ItemGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+  <PropertyGroup>
+    <TargetFramework>net9.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.1.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Albatross.Expression\Albatross.Expression.csproj" />
+  </ItemGroup>
+
 </Project>
