--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project>
 	<PropertyGroup>
-		<Version>4.0.0</Version>
+		<Version>4.0.0-220.main+1fb341a</Version>
 		<AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
 		<ProduceReferenceAssembly>True</ProduceReferenceAssembly>
 		<LangVersion>Latest</LangVersion>
