--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -12,5 +12,7 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>icon.png</PackageIcon>
 		<Authors>Rushui Guan</Authors>
+		<Copyright>Copyright 2018</Copyright>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 	</PropertyGroup>
 </Project>
