--- a/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
+++ b/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
@@ -21,9 +21,9 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="Albatross.CommandLine" Version="7.8.7" />
-		<PackageReference Include="Albatross.Config" Version="9.0.1-9.main" />
+		<PackageReference Include="Albatross.Config" Version="9.0.1" />
 		<PackageReference Include="Albatross.Logging" Version="9.0.0" />
-		<PackageReference Include="Albatross.Reflection" Version="7.5.9" />
+		<PackageReference Include="Albatross.Reflection" Version="8.0.4" />
 		<PackageReference Include="Albatross.Text" Version="8.0.11" />
 		<PackageReference Include="Albatross.Text.Table" Version="8.0.11" />
 	</ItemGroup>
