--- a/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
+++ b/Albatross.Expression.Utility/Albatross.Expression.Utility.csproj
@@ -2,7 +2,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net9.0</TargetFramework>
+		<TargetFramework>net10.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<PackageId>Albatross.Expression.Utility</PackageId>
 		<PackAsTool>True</PackAsTool>
@@ -26,12 +26,10 @@
 		</None>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Albatross.CommandLine" Version="7.8.7" />
-		<PackageReference Include="Albatross.Config" Version="9.0.1" />
-		<PackageReference Include="Albatross.Logging" Version="9.0.0" />
-		<PackageReference Include="Albatross.Reflection" Version="8.0.4" />
-		<PackageReference Include="Albatross.Text" Version="8.0.11" />
-		<PackageReference Include="Albatross.Text.Table" Version="8.0.11" />
+		<PackageReference Include="Albatross.CommandLine" Version="8.0.0" />
+		<PackageReference Include="Albatross.Config" Version="10.0.0-16.main" />
+		<PackageReference Include="Albatross.Logging" Version="10.0.0-11.main" />
+		<PackageReference Include="Albatross.Reflection" Version="10.0.0-44.main" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\Albatross.Expression\Albatross.Expression.csproj" />
