--- a/docfx_project/articles/toc.yml
+++ b/docfx_project/articles/toc.yml
@@ -1,4 +1,8 @@
-- name: Introduction
-  href: introduction.md
-- name: Getting Started
-  href: getting-started.md
+- name: Introduction 
+  href: intro.md
+- name: Parser
+  href: parser.md
+- name: Operations
+  href: operations.md
+- name: Execution Context
+  href: execution-context.md
